fixed like on stackoverflow-like pages. pun intended.

--- a/contentscripts/contentscript.css
+++ b/contentscripts/contentscript.css
@@ -1,9 +1,9 @@
 .float{
-	position:fixed;
+	position:fixed !important;
 	/*width:60px;*/
 	/*height:60px;*/
-	bottom:40px;
-	right:40px;
+	bottom:40px !important;
+	right:40px !important;
 	/*color:#FFF;*/
 	/*border-radius:10px;*/
 	/*border-color: black;*/
@@ -11,17 +11,17 @@
 	/*border: 4px;*/
 	/*text-align:center;*/
 	/* box-shadow: 3px 3px 3px #999; */
-	z-index: 10000;
+	z-index: 10000 !important;
 }
 
 .clicked {
-	color: #3c9a5f;
-	text-shadow: 0px 0px 0px #000;
+	color: #3c9a5f !important;
+	text-shadow: 0px 0px 0px #000 !important;
 
 }
 
 .likeButton{
-	text-shadow: 0px 0px 3px #353535;
-	vertical-align: middle;
+	text-shadow: 0px 0px 3px #353535 !important;
+	vertical-align: middle !important;
 
 }
