--- a/css/custom.css
+++ b/css/custom.css
@@ -1,24 +1,25 @@
 .btn-sailboat {
-    display: inline-block;
-    font-weight: 300;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: middle;
+    display: inline-block !important;
+    font-weight: 300 !important;
+    text-align: center !important;
+    white-space: nowrap !important;
+    vertical-align: middle !important;
     background-color: white;
     color:black;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    border: 1px solid black;
+    border: 1px solid black !important;
     border-radius:100%;
-    padding: 0.375rem 1rem;
-    font-size: 20px;
-    width: 60px;
-    font-family:"Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    height:30px;
+    padding: 2px 1px !important;
+    font-size: 20px !important;
+    width: 60px !important;
+    font-family:"Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
+    min-height:35px !important;
+    height:35px !important;
     /*font-size: 0.9375rem;*/
-    line-height: 1.5;
+    line-height: 1.5 !important;
     /*min-height:20px;*/
     -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
     transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -27,19 +28,17 @@
 }
 
 .btn-sailboat-primary {
-    color: #fff;
+    color: #fff !important;
     font-size: 20px;
-    width:60px;
-    height:30px;
-    background-color: #03a87c;
-    border-color: #03a87c;
-    font-family:"Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    background-color: #03a87c !important;
+    border-color: #03a87c !important;
+    font-family:"Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
 }
 
 .btn-sailboat-primary:hover {
-    color: #fff;
-    background-color: #03a87c;
-    border-color: #03a87c;
+    color: #fff !important;
+    background-color: #03a87c !important;
+    border-color: #03a87c !important;
 }
 
 .btn-sailboat-primary:focus, .btn-primary.focus {
@@ -59,9 +58,9 @@
 }
 
 .btn-secondary-sailboat {
-    color: #111;
-    background-color: #eee;
-    border-color: #eee;
+    color: #111 !important;
+    background-color: #eee !important;
+    border-color: #eee !important;
 }
 
 .btn-secondary-sailboat:hover {
@@ -77,11 +76,11 @@
 
 
 .round-corner {
-    border-radius: 0.6em;
+    border-radius: 0.6em !important;
 }
 
 .round-corner-left {
-    border-bottom-left-radius: 0.6em;
+    border-bottom-left-radius: 0.6em ;
     border-top-left-radius: 0.6em;
 }
 
